<resources>    <string name="app_name">User School</string>    <string name="title_activity_student">MainActivity</string>    <string name="title_home">Home</string>    <string name="title_dashboard">Dashboard</string>    <string name="title_notifications">Notifications</string>    <string name="sign_in">Sing In</string>    <string name="create_account">Create Acount</string>    <string name="forget_password">Forget Password</string>    <string name="hint_password">Password</string>    <string name="name">Name</string>    <string name="student">Student</string>    <string name="teacher">Teacher</string>    <string name="profile">Profile</string>    <string name="absence">Absence</string>    <string name="marks">Marks</string>    <string name="remeber_me">Remeber Me ?</string>    <string name="title_activity_teacher">MainActivity</string></resources>