<?xml version="1.0" encoding="utf-8"?><navigation xmlns:android="http://schemas.android.com/apk/res/android"    xmlns:app="http://schemas.android.com/apk/res-auto"    xmlns:tools="http://schemas.android.com/tools"    android:id="@+id/mobile_navigation"    app:startDestination="@+id/navigation_marks">    <fragment        android:id="@+id/navigation_marks"        android:name="com.example.userschool.view.fragment.MarksStudentFragment"        android:label="@string/marks"        tools:layout="@layout/fragment_marks_student" />    <fragment        android:id="@+id/navigation_absence"        android:name="com.example.userschool.view.fragment.AbseceStudentFragment"        android:label="@string/absence"        tools:layout="@layout/fragment_absence_student" />    <fragment        android:id="@+id/navigation_profile"        android:name="com.example.userschool.view.fragment.ProfileStudentFragment"        android:label="@string/profile"        tools:layout="@layout/fragment_prorfile_student" /></navigation>